--- a/easymesh/platform/msvc2008/projects/easymesh.vcproj
+++ b/easymesh/platform/msvc2008/projects/easymesh.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymesh;..\..\..\..\easyeditor\include;..\..\..\..\easyscale9\src;..\..\..\..\easytext\src;..\..\..\..\easyanim\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymesh;..\..\..\..\sprite2\include;..\..\..\..\sm\src\sm;..\..\..\..\easyeditor\include;..\..\..\..\easyscale9\src;..\..\..\..\easytext\src;..\..\..\..\easyanim\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -122,7 +122,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymesh;..\..\..\..\easyeditor\include;..\..\..\..\easyscale9\src;..\..\..\..\easytext\src;..\..\..\..\easyanim\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\src\easymesh;..\..\..\..\sprite2\include;..\..\..\..\sm\src\sm;..\..\..\..\easyeditor\include;..\..\..\..\easyscale9\src;..\..\..\..\easytext\src;..\..\..\..\easyanim\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easycomplex\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
