[ADDED] sym_base to sprite, multi spr can use same mesh struct
Former-commit-id: 87bc298d967ec8c4689e25c1a83e78931cd4504a

--- a/easyeditor/platform/msvc2008/projects/libgui.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libgui.vcproj
@@ -230,6 +230,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\include\ee\OpenSymbolMonitor.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\gui\SelectDrawTypeWidget.cpp"
 				>
 			</File>
@@ -287,6 +291,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\ee\MyColorProperty.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\gui\OpenSymbolProperty.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\OpenSymbolProperty.h"
 				>
 			</File>
 			<File
