[CHANGED] use s2 shape
Former-commit-id: 99b24817c6607b2f25191b6a240f1d48431df3dd

--- a/easyshape/platform/msvc2008/projects/libshape.vcproj
+++ b/easyshape/platform/msvc2008/projects/libshape.vcproj
@@ -212,6 +212,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libshape\ChainShapeNew.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshape\ChainShapeNew.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libshape\CircleShape.cpp"
 					>
 				</File>
