--- a/sm/platform/msvc2008/projects/sm.vcproj
+++ b/sm/platform/msvc2008/projects/sm.vcproj
@@ -208,6 +208,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\sm\SM_Test.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\sm\SM_Test.h"
 				>
 			</File>
