--- a/easyshape/platform/msvc2008/projects/libshape.vcproj
+++ b/easyshape/platform/msvc2008/projects/libshape.vcproj
@@ -204,6 +204,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\libshape\BezierShapeNew.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libshape\BezierShapNew.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libshape\ChainShape.cpp"
 					>
 				</File>
