--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -742,6 +742,10 @@
 						Name="gray"
 						>
 						<File
+							RelativePath="..\..\..\src\shaderlab\parser\Gray.cpp"
+							>
+						</File>
+						<File
 							RelativePath="..\..\..\src\shaderlab\parser\Gray.h"
 							>
 						</File>
